2005-08-09  Mark Wielaard  <mark@klomp.org>

	* javax/swing/tree/DefaultTreeModel.java: Fix copyright
	boilerplate formatting.

2005-08-09  Lillian Angel  <langel@redhat.com>

	* javax/swing/tree/DefaultTreeModel.java:
	Fixed formatting of class.

2005-08-09  Lillian Angel  <langel@redhat.com>

	Fixes Bug #23255
	* javax/swing/plaf/basic/BasicTreeUI.java:
	Fixed entire class to use Objects as opposed to TreeNodes.
	(getPathBounds): Changed root to Object
	(getPathForRow): Likewise.
	(getRowCount): Likewise.
	(getPreferredSize): Changed root and nextNode to be of type
	Object.
	(isLeaf): Took out unnecessary code. 
	(keyPressed): Changed all TreeNodes to be of type Object.
	(getCellLocation): Likewise.
	(paintNode): Likewise.
	(paintRecursive): Likewise.
	(getParent): Implemented.
	(findNode): Helper Implemented.
	(getNextVisibleNode): Changed return and parameter type to Object.
	(getPreviousVisibleNode): Likewise.
	(getNextNode): Likewise.
	(getPreviousNode): Likewise.
	(getNextSibling): Likewise.
	(getPreviousSibling): Likewise.
	(getPathToRoot): Likewise.
	(getLevel): Likewise.
	* javax/swing/tree/DefaultTreeModel.java
	(getIndexOfChild): Implemented.

2005-08-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/CORBA/package.html: Documentation update.
        * org/omg/DynamicAny/package.html: New file.

2005-08-08  Casey Marshall  <csm@gnu.org>

	PR classpath/23120
	* gnu/java/security/provider/DSAKeyPairGenerator.java
	(<init>): made public; set default values.
	(initialize): just call 'initialize(int,boolean,SecureRandom).'
	(initialize): just call 'initialize(DSAParams,SecureRandom).'
	(initialize): check all values for 'null' before overwriting.
	(initialize): fill in defaults or generate new parameters here.
	(generateKeyPair): don't create parameters; fill in 'random' if
	'null;' use 'random,' not a new Random object, when generating
	random numbers.
	(getDefaults): fix keysize check.

	PR classpath/22990